--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  agora_rtc_engine: ^4.0.1
+  permission_handler: ^8.0.1
+  firebase_core:
+  firebase_auth:
+  firebase_storage:
+  path_provider:
+  file_picker:
+  flutter_native_image:
+  cloud_firestore:
+  uuid:
 
 dev_dependencies:
   flutter_test:
